# lightstage-server-rs

./: Cargo.toml  LICENSE  README.md  kinet.lua
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml
kinetrs/: Cargo.toml  README.md
kinetrs/src/: fixtures.rs  lib.rs  packet.rs  payload.rs
lsserver/: Cargo.toml
lsserver/src/: config.rs  demo.rs  fixtures.rs  main.rs  network.rs  renderer.rs  state.rs  universe.rs
lsserver/src/animator/: demo.rs  mod.rs  olat.rs  playback.rs
lsserver/src/api/: README.md  mod.rs  rest.rs  ws.rs
