[package]
  description = "Philips Colour Kinetics KiNET packet format"
  edition = "2024"
  homepage = "https://github.com/lightstageurop/lightstage-server-rs/tree/master/kinetrs"
  keywords = ["dmx", "kinet", "lighting"]
  license = "MIT"
  name = "kinetrs"
  repository.workspace = true
  version = "0.2.0"

[dependencies]
  num_enum = "0.7.6"
