[package]
  authors = ["Thomas Aldrian <aldrian.thom@proton.me"]
  description = "Philips Colour Kinetics KiNET packet format"
  edition.workspace = true
  homepage = "https://github.com/lightstageurop/lightstage-server-rs/tree/master/kinetrs"
  keywords = ["dmx", "kinet", "lighting"]
  license = "MIT"
  name = "kinetrs"
  repository.workspace = true
  rust-version.workspace = true
  version = "0.2.0"

[dependencies]
  num_enum = "0.7.6"
  thiserror = "2.0.18"
