[package]
  edition = "2024"
  name = "lsserver"
  publish = false
  version = "0.1.0"

[dependencies]
  anyhow = "1.0.103"
  tokio = { version = "1.52.3", features = ["full"] }
  tracing = "0.1.44"
  tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

  kinetrs = { path = "../kinetrs" }

  axum = "0.8.9"
  serde = { version = "1.0.228", features = ["derive"] }
