[package]
  edition = "2024"
  name = "lsserver"
  publish = false
  version = "0.1.0"

[dependencies]
  anyhow = "1.0.103"
  tokio = { version = "1.52.3", features = ["full"] }
  tracing = "0.1.44"
  tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

  kinetrs = { path = "../kinetrs" }

  axum = "0.8.9"
  local-ip-address = "0.6.13"
  serde = { version = "1.0.228", features = ["derive"] }
  utoipa = { version = "5.5.0", features = ["axum_extras"] }
  utoipa-axum = "0.2.0"
  utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
  utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
