[package]
  authors = ["Thomas Aldrian <thomas.aldrian24@imperial.ac.uk>"]
  description = "Light Stage Control Server"
  edition.workspace = true
  license = "MIT"
  name = "lsserver"
  publish = false
  rust-version.workspace = true
  version = "0.1.0"

[features]
  default = []
  gpio = ["dep:rppal"]

[dependencies]
  anyhow = "1.0.103"
  tokio = { version = "1.52.3", features = ["full"] }
  tracing = "0.1.44"
  tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

  kinetrs = { path = "../kinetrs" }

  axum = { version = "0.8.9", features = ["ws"] }
  ciborium = "0.2.2"
  local-ip-address = "0.6.13"
  serde = { version = "1.0.228", features = ["derive"] }
  utoipa = { version = "5.5.0", features = ["axum_extras"] }
  utoipa-axum = "0.2.0"
  utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
  utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

  rppal = { version = "0.22.1", optional = true }
